--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 form {
-  padding: 30px;
+  padding: 15px;
   background-color: #fff;
   border-radius: 6px;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
@@ -28,6 +28,12 @@ footer {
 a {
   color: #2c786c;
   text-decoration: none;
+}
+
+.hint {
+  margin-top: 5px;
+  font-size: 12px;
+  opacity: 0.8;
 }
 
 .container {
@@ -55,10 +61,11 @@ a {
   font-size: 14px;
   line-height: 20px;
   padding: 5px 5px;
-  width: 15%;
+  width: 17%;
 }
 
-.output-response {
+.titles {
+  font-size: 16px;
   text-align: left;
   margin-bottom: 30px;
   background-color: #fff;
@@ -66,4 +73,8 @@ a {
   line-height: 24px;
   border-left: 3px solid #2c786c;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+}
+
+.hidden {
+  display: none;
 }
